# V2

./: .aider.chat.history.md  .aider.input.history  .env  .env.example  .env~  .gitignore  2025-08-11-this-session-is-being-continued-from-a-previous-co.txt  AGENTE_4_COMPLETION_REPORT.md  AGENTS.md  ARCHITECTURE.md  AVANCE_2025-08-10.md  Agentes.md  CHANNEL_MANAGEMENT_PLAN.md  CLAUDE.md  CODE_DUPLICATION_FORENSIC_ANALYSIS_AND_AGENT_BEST_PRACTICES.md  CODE_DUPLICATION_REPORT.md  DAILY_STANDUP.md  DIANA_ADMIN_ELITE_MASTERPIECE.md  DIANA_ADMIN_MASTER_DEPLOYMENT_SUMMARY.md  DIANA_BOT_V2_FINAL_COMPLETION_REPORT.md  DIANA_INTEGRATION_ARCHITECTURE.md  DIANA_INTEGRATION_COMPLETE.md  DMS_temp.py  EVENT_BUS_INTEGRATION_SUMMARY.md  FREE_USER_ENV_EXAMPLE.md  GEMINI.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_PLAN.md  INTEGRATION_FREE_USER_GUIDE.md  INTEGRATION_PLAN.md  NARRATIVE_SYSTEM_COMPLETION_REPORT.md  NEXT_STEPS.md  PROGRESS-PHASE3.md  PROGRESS.md  PROGRESS_UPDATE_2025-07-31.md  PROGRESS_UPDATE_2025-07-31_v2.md  PROGRESS_UPDATE_TOKENEITOR_2025-07-31.md  PROJECT_MANAGER_REPORT_2025-08-10.md  PROJECT_STATUS.md  README.md  (+45 more)
.aider.tags.cache.v4/: cache.db
.claude/: settings.json
.gpteng/: file_selection.toml
OBLIGADA!/: CONEXION_SERVICIOS_REALES_2025-08-09.md  INVENTARIO_SERVICIOS.json
archive-docs/: AGENT_TASKS.md  DIANA_GAMIFICATION_INTEGRATION.md  GAMIFICATION_INTEGRATION_STATUS.md  IMPLEMENTATION_STATUS.md  INTEGRATION_STRATEGY.md  PROGRESS_UPDATE_EMOTIONAL_SYSTEM_2025-07-31.md  PROJECT_MANAGER_REPORT_2025-08-01.md  README.md  README_DIANA_ADMIN_COMPLETE_OLD.md  (+4 more)
(+313 files in other folders)
