[tool.poetry]
name = "diana-bot"
version = "2.0.0"
description = "Diana - Un bot de Telegram con narrativa profunda y gamificación"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.0.0"
sqlalchemy = "^2.0.0"
alembic = "^1.10.0"
asyncpg = "^0.27.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
apscheduler = "^3.10.0"
structlog = "^23.1.0"
emoji = "^2.5.0"
httpx = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.0"
flake8 = "^6.0.0"
ruff = "^0.0.292"
dependency-injector = "^4.41.0"

[tool.poetry.scripts]
bot = "src.bot.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]